Save notebook with output for all cells

--- a/notebooks/Aerosol_CCI.ipynb
+++ b/notebooks/Aerosol_CCI.ipynb
@@ -29,10 +29,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "id": "f05b0d63-ff02-41f8-9070-f0d9c44d9a3c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<frozen abc>:106: FutureWarning: xarray subclass VectorDataCube should explicitly define __slots__\n"
+     ]
+    }
+   ],
    "source": [
     "from xcube.core.store import new_data_store\n",
     "from esa_climate_toolbox.core import get_op\n",
@@ -68,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "id": "94164c99-2ef2-48d7-b098-6e136ee861af",
    "metadata": {},
    "outputs": [],
@@ -95,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "id": "7672a7f4-be9a-4b8f-a888-93d31647d5b4",
    "metadata": {},
    "outputs": [],
@@ -126,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "id": "1ccb7546-70f0-479d-bb0a-d902190500af",
    "metadata": {},
    "outputs": [
@@ -2542,6 +2550,7 @@
         },
         "type": "object"
        },
+       "spatial_res": 1,
        "time_period": "1D",
        "time_range": [
         "2002-05-20",
@@ -2549,10 +2558,10 @@
        ]
       },
       "text/plain": [
-       "<xcube.core.store.descriptor.DatasetDescriptor at 0x7f0cb7d50fb0>"
+       "<xcube.core.store.descriptor.DatasetDescriptor at 0x7fced4217020>"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2575,7 +2584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "id": "a0ee1118-47e2-47c4-9401-1bb069776fdc",
    "metadata": {},
    "outputs": [
@@ -2693,10 +2702,10 @@
        "type": "object"
       },
       "text/plain": [
-       "<xcube.util.jsonschema.JsonObjectSchema at 0x7f0cb6e4f4d0>"
+       "<xcube.util.jsonschema.JsonObjectSchema at 0x7fced4c54470>"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2721,7 +2730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "id": "8a2be689-288c-4fb5-abe9-99b4b84eef07",
    "metadata": {},
    "outputs": [],
@@ -2746,7 +2755,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "id": "145b10bc-68b4-4645-a4a8-761965cb6098",
    "metadata": {},
    "outputs": [],
@@ -2773,7 +2782,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "id": "192daaeb-241a-4fba-956f-3e7ac8cb04b5",
    "metadata": {},
    "outputs": [
@@ -2796,7 +2805,7 @@
       "Attributes:\n",
       "    Conventions:             CF-1.7\n",
       "    title:                   esacci.AEROSOL.day.L3C.AER_PRODUCTS.AATSR.Envisa...\n",
-      "    date_created:            2025-04-07T14:17:16.166271\n",
+      "    date_created:            2025-04-09T11:24:05.001396\n",
       "    processing_level:        L3C\n",
       "    time_coverage_start:     2011-06-21T00:00:00\n",
       "    time_coverage_end:       2011-06-22T00:00:00\n",
@@ -2823,7 +2832,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 10,
    "id": "65ec997b-a0e8-40d7-8aa9-737a3ac2ec0d",
    "metadata": {
     "scrolled": true
@@ -2862,7 +2871,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d5201f55-85fe-41b8-8734-47473ab12b76",
+   "id": "9ecac0da-9d74-4c8c-b45c-2fcc81c6a7d6",
    "metadata": {},
    "outputs": [],
    "source": []
