--- a/notebooks/Aerosol_CCI.ipynb
+++ b/notebooks/Aerosol_CCI.ipynb
@@ -5,7 +5,7 @@
    "id": "ab36065c-42b2-4539-94b5-c1e048a0e8b4",
    "metadata": {},
    "source": [
-    "# ESA CCI Dataset Analysis Template"
+    "# Getting Started with Aerosol CCI Data"
    ]
   },
   {
@@ -54,7 +54,8 @@
     "%matplotlib inline\n",
     "\n",
     "# Suppress FutureWarnings related to xarray subclassing\n",
-    "warnings.filterwarnings(\"ignore\", category=FutureWarning, message=\".*xarray subclass VectorDataCube.*\")"
+    "warnings.filterwarnings(\"ignore\", category=FutureWarning, message=\".*xarray subclass VectorDataCube.*\")\n",
+    "warnings.filterwarnings(\"ignore\", category=FutureWarning)"
    ]
   },
   {
@@ -2558,7 +2559,7 @@
        ]
       },
       "text/plain": [
-       "<xcube.core.store.descriptor.DatasetDescriptor at 0x7fced4217020>"
+       "<xcube.core.store.descriptor.DatasetDescriptor at 0x7fefb47ef950>"
       ]
      },
      "execution_count": 4,
@@ -2702,7 +2703,7 @@
        "type": "object"
       },
       "text/plain": [
-       "<xcube.util.jsonschema.JsonObjectSchema at 0x7fced4c54470>"
+       "<xcube.util.jsonschema.JsonObjectSchema at 0x7fefb43f9be0>"
       ]
      },
      "execution_count": 5,
@@ -2805,7 +2806,7 @@
       "Attributes:\n",
       "    Conventions:             CF-1.7\n",
       "    title:                   esacci.AEROSOL.day.L3C.AER_PRODUCTS.AATSR.Envisa...\n",
-      "    date_created:            2025-04-09T11:24:05.001396\n",
+      "    date_created:            2025-04-10T08:29:57.662787\n",
       "    processing_level:        L3C\n",
       "    time_coverage_start:     2011-06-21T00:00:00\n",
       "    time_coverage_end:       2011-06-22T00:00:00\n",
@@ -2832,7 +2833,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "65ec997b-a0e8-40d7-8aa9-737a3ac2ec0d",
    "metadata": {
     "scrolled": true
