Minor update of Biomass JN, add JNs for Cloud, Fire, GHG

--- a/notebooks/Biomass_CCI.ipynb
+++ b/notebooks/Biomass_CCI.ipynb
@@ -29,18 +29,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "id": "f05b0d63-ff02-41f8-9070-f0d9c44d9a3c",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "<frozen abc>:106: FutureWarning: xarray subclass VectorDataCube should explicitly define __slots__\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from xcube.core.store import new_data_store\n",
     "from esa_climate_toolbox.core import get_op\n",
@@ -76,14 +68,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "id": "94164c99-2ef2-48d7-b098-6e136ee861af",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('esacci.BIOMASS.yr.L4.AGB.multi-sensor.multi-platform.CHANGE.4-0.r1',\n",
+       "  'esa-cci'),\n",
+       " ('esacci.BIOMASS.yr.L4.AGB.multi-sensor.multi-platform.CHANGE.5-0.2016-2015',\n",
+       "  'esa-cci'),\n",
+       " ('esacci.BIOMASS.yr.L4.AGB.multi-sensor.multi-platform.CHANGE.5-0.2017-2016',\n",
+       "  'esa-cci'),\n",
+       " ('esacci.BIOMASS.yr.L4.AGB.multi-sensor.multi-platform.CHANGE.5-0.2018-2017',\n",
+       "  'esa-cci'),\n",
+       " ('esacci.BIOMASS.yr.L4.AGB.multi-sensor.multi-platform.CHANGE.5-0.2019-2018',\n",
+       "  'esa-cci'),\n",
+       " ('esacci.BIOMASS.yr.L4.AGB.multi-sensor.multi-platform.CHANGE.5-0.2020-2010',\n",
+       "  'esa-cci'),\n",
+       " ('esacci.BIOMASS.yr.L4.AGB.multi-sensor.multi-platform.CHANGE.5-0.2020-2019',\n",
+       "  'esa-cci'),\n",
+       " ('esacci.BIOMASS.yr.L4.AGB.multi-sensor.multi-platform.CHANGE.5-0.2021-2020',\n",
+       "  'esa-cci'),\n",
+       " ('esacci.BIOMASS.yr.L4.AGB.multi-sensor.multi-platform.MERGED.2-0.r1',\n",
+       "  'esa-cci'),\n",
+       " ('esacci.BIOMASS.yr.L4.AGB.multi-sensor.multi-platform.MERGED.3-0.r1',\n",
+       "  'esa-cci'),\n",
+       " ('esacci.BIOMASS.yr.L4.AGB.multi-sensor.multi-platform.MERGED.4-0.r1',\n",
+       "  'esa-cci'),\n",
+       " ('esacci.BIOMASS.yr.L4.AGB.multi-sensor.multi-platform.MERGED.5-0.10000m',\n",
+       "  'esa-cci'),\n",
+       " ('esacci.BIOMASS.yr.L4.AGB.multi-sensor.multi-platform.MERGED.5-0.1000m',\n",
+       "  'esa-cci'),\n",
+       " ('esacci.BIOMASS.yr.L4.AGB.multi-sensor.multi-platform.MERGED.5-0.100m',\n",
+       "  'esa-cci'),\n",
+       " ('esacci.BIOMASS.yr.L4.AGB.multi-sensor.multi-platform.MERGED.5-0.25000m',\n",
+       "  'esa-cci'),\n",
+       " ('esacci.BIOMASS.yr.L4.AGB.multi-sensor.multi-platform.MERGED.5-0.50000m',\n",
+       "  'esa-cci')]"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "cci_store = new_data_store(\"esa-cci\")\n",
+    "cci_store = new_data_store(\"esa-cci-zarr\")\n",
     "# List all available data sets of an ECV\n",
-    "# list_ecv_datasets(\"Biomass\")"
+    "list_ecv_datasets(\"Biomass\")"
    ]
   },
   {
