Add Land cover JN, minor formatting of cloud JN, GHG is working for CH4

--- a/notebooks/Cloud_CCI.ipynb
+++ b/notebooks/Cloud_CCI.ipynb
@@ -116,7 +116,7 @@
     "### Step 3: Define the Dataset ID  \n",
     "To work with a specific ESA CCI dataset, we need to specify its **dataset ID**. This unique identifier tells the toolbox which variable and product we want to access.\n",
     "\n",
-    "In this example, we are using a dataset from the Cloud CCI project that provides monthly Level 3 cloud property products, derived from multiple satellite sensors. These products include key cloud variables such as cloud fraction (cfc), which is important for understanding cloud coverage, its variability, and its impact on Earth’s radiation budget and climate.\n",
+    "In this example, we are using a dataset from the **Cloud CCI project** that provides monthly Level 3 cloud property products, derived from multiple satellite sensors. These products include key cloud variables such as **cloud fraction (cfc)**, which is important for understanding cloud coverage, its variability, and its impact on Earth’s radiation budget and climate.\n",
     "\n",
     "We will use the following dataset ID:"
    ]
