Add Greenland Ice sheets and Ozone JN, minor formatting of GHG JN

--- a/notebooks/GHG_CCI.ipynb
+++ b/notebooks/GHG_CCI.ipynb
@@ -80,63 +80,11 @@
    "execution_count": 2,
    "id": "94164c99-2ef2-48d7-b098-6e136ee861af",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[('esacci.GHG.satellite-orbit-frequency.L2.CH4.TROPOMI.Sentinel-5P.WFMD.v1-8.201711-202406',\n",
-       "  'esa-cci'),\n",
-       " ('esacci.GHG.satellite-orbit-frequency.L2.CO2.OCO.OCO-2.FOCAL.v11.r1',\n",
-       "  'esa-cci'),\n",
-       " ('esacci.GHG.satellite-orbit-frequency.L2.CH4.SCIAMACHY.Envisat.IMAP.v7-2.r1',\n",
-       "  'esa-cci'),\n",
-       " ('esacci.GHG.satellite-orbit-frequency.L2.CH4.SCIAMACHY.Envisat.WFMD.v4-0.r1',\n",
-       "  'esa-cci'),\n",
-       " ('esacci.GHG.satellite-orbit-frequency.L2.CH4.TANSO-FTS-2.GOSAT-2.SRFP.v2-0-2.r1',\n",
-       "  'esa-cci'),\n",
-       " ('esacci.GHG.satellite-orbit-frequency.L2.CH4.TANSO-FTS-2.GOSAT-2.SRPR.v2-0-2.r1',\n",
-       "  'esa-cci'),\n",
-       " ('esacci.GHG.satellite-orbit-frequency.L2.CH4.TANSO-FTS.GOSAT.EMMA.ch4_v1-2.r1',\n",
-       "  'esa-cci'),\n",
-       " ('esacci.GHG.satellite-orbit-frequency.L2.CH4.TANSO-FTS.GOSAT.OCFP.v2-1.r1',\n",
-       "  'esa-cci'),\n",
-       " ('esacci.GHG.satellite-orbit-frequency.L2.CH4.TANSO-FTS.GOSAT.OCPR.v7-0.r1',\n",
-       "  'esa-cci'),\n",
-       " ('esacci.GHG.satellite-orbit-frequency.L2.CH4.TANSO-FTS.GOSAT.SRFP.v2-3-8.r1',\n",
-       "  'esa-cci'),\n",
-       " ('esacci.GHG.satellite-orbit-frequency.L2.CH4.TANSO-FTS.GOSAT.SRPR.v2-3-8.r1',\n",
-       "  'esa-cci'),\n",
-       " ('esacci.GHG.satellite-orbit-frequency.L2.CH4.TROPOMI.Sentinel-5P.WFMD.v1-8.r1',\n",
-       "  'esa-cci'),\n",
-       " ('esacci.GHG.satellite-orbit-frequency.L2.CO2.OCO.OCO-2.FOCAL.v10-1.r1',\n",
-       "  'esa-cci'),\n",
-       " ('esacci.GHG.satellite-orbit-frequency.L2.CO2.SCIAMACHY.Envisat.BESD.v02-01-02.r1',\n",
-       "  'esa-cci'),\n",
-       " ('esacci.GHG.satellite-orbit-frequency.L2.CO2.SCIAMACHY.Envisat.WFMD.v4-0.r1',\n",
-       "  'esa-cci'),\n",
-       " ('esacci.GHG.satellite-orbit-frequency.L2.CO2.TANSO-FTS-2.GOSAT-2.SRFP.v2-0-2.r1',\n",
-       "  'esa-cci'),\n",
-       " ('esacci.GHG.satellite-orbit-frequency.L2.CO2.TANSO-FTS.GOSAT.EMMA.v2-2c.r1',\n",
-       "  'esa-cci'),\n",
-       " ('esacci.GHG.satellite-orbit-frequency.L2.CO2.TANSO-FTS.GOSAT.OCFP.v7-0-1.r1',\n",
-       "  'esa-cci'),\n",
-       " ('esacci.GHG.satellite-orbit-frequency.L2.CO2.TANSO-FTS.GOSAT.SRFP.v2-3-8.r1',\n",
-       "  'esa-cci'),\n",
-       " ('esacci.GHG.satellite-orbit-frequency.L2.CO2.multi-sensor.multi-platform.EMMA.v2-2a.r1',\n",
-       "  'esa-cci'),\n",
-       " ('esacci.GHG.satellite-orbit-frequency.L2.CO2.multi-sensor.multi-platform.EMMA.v2-2b.r1',\n",
-       "  'esa-cci')]"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "cci_store = new_data_store(\"esa-cci\")\n",
     "# List all available data sets of an ECV\n",
-    "list_ecv_datasets(\"GHG\")"
+    "# list_ecv_datasets(\"GHG\")"
    ]
   },
   {
@@ -147,7 +95,7 @@
     "### Step 3: Define the Dataset ID  \n",
     "To work with a specific ESA CCI dataset, we need to specify its **dataset ID**. This unique identifier tells the toolbox which variable and product we want to access.\n",
     "\n",
-    "In this example, we are using a dataset providing **Greenhouse Gas** derived from the ??? sensor. This variable is important for understanding the effects of greenhouse gases on climate and air quality.\n",
+    "In this example, we are using a dataset from the Greenhouse Gas (GHG) CCI project that provides column-averaged methane concentrations (XCH₄). These data are derived from satellite sensors such as **TANSO-FTS onboard GOSAT** and **Sentinel-5P TROPOMI**, depending on the dataset version. XCH₄ is a key variable for monitoring atmospheric methane, a potent greenhouse gas with significant implications for climate change.\n",
     "\n",
     "For other ESA CCI projects (e.g., Land Cover, Soil Moisture, Sea Surface Temperature), simply replace the dataset ID accordingly.\n",
     "\n",
@@ -434,7 +382,7 @@
        ]
       },
       "text/plain": [
-       "<xcube.core.store.descriptor.GeoDataFrameDescriptor at 0x7fd42424ed20>"
+       "<xcube.core.store.descriptor.GeoDataFrameDescriptor at 0x7f4ed833b290>"
       ]
      },
      "execution_count": 4,
@@ -554,7 +502,7 @@
        "type": "object"
       },
       "text/plain": [
-       "<xcube.util.jsonschema.JsonObjectSchema at 0x7fd3a5bee000>"
+       "<xcube.util.jsonschema.JsonObjectSchema at 0x7f4ebe6fe900>"
       ]
      },
      "execution_count": 5,
