--- a/notebooks/Biomass_CCI.ipynb
+++ b/notebooks/Biomass_CCI.ipynb
@@ -29,10 +29,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "id": "f05b0d63-ff02-41f8-9070-f0d9c44d9a3c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<frozen abc>:106: FutureWarning: xarray subclass VectorDataCube should explicitly define __slots__\n"
+     ]
+    }
+   ],
    "source": [
     "from xcube.core.store import new_data_store\n",
     "from esa_climate_toolbox.core import get_op\n",
@@ -68,56 +76,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "id": "94164c99-2ef2-48d7-b098-6e136ee861af",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[('esacci.BIOMASS.yr.L4.AGB.multi-sensor.multi-platform.CHANGE.4-0.r1',\n",
-       "  'esa-cci'),\n",
-       " ('esacci.BIOMASS.yr.L4.AGB.multi-sensor.multi-platform.CHANGE.5-0.2016-2015',\n",
-       "  'esa-cci'),\n",
-       " ('esacci.BIOMASS.yr.L4.AGB.multi-sensor.multi-platform.CHANGE.5-0.2017-2016',\n",
-       "  'esa-cci'),\n",
-       " ('esacci.BIOMASS.yr.L4.AGB.multi-sensor.multi-platform.CHANGE.5-0.2018-2017',\n",
-       "  'esa-cci'),\n",
-       " ('esacci.BIOMASS.yr.L4.AGB.multi-sensor.multi-platform.CHANGE.5-0.2019-2018',\n",
-       "  'esa-cci'),\n",
-       " ('esacci.BIOMASS.yr.L4.AGB.multi-sensor.multi-platform.CHANGE.5-0.2020-2010',\n",
-       "  'esa-cci'),\n",
-       " ('esacci.BIOMASS.yr.L4.AGB.multi-sensor.multi-platform.CHANGE.5-0.2020-2019',\n",
-       "  'esa-cci'),\n",
-       " ('esacci.BIOMASS.yr.L4.AGB.multi-sensor.multi-platform.CHANGE.5-0.2021-2020',\n",
-       "  'esa-cci'),\n",
-       " ('esacci.BIOMASS.yr.L4.AGB.multi-sensor.multi-platform.MERGED.2-0.r1',\n",
-       "  'esa-cci'),\n",
-       " ('esacci.BIOMASS.yr.L4.AGB.multi-sensor.multi-platform.MERGED.3-0.r1',\n",
-       "  'esa-cci'),\n",
-       " ('esacci.BIOMASS.yr.L4.AGB.multi-sensor.multi-platform.MERGED.4-0.r1',\n",
-       "  'esa-cci'),\n",
-       " ('esacci.BIOMASS.yr.L4.AGB.multi-sensor.multi-platform.MERGED.5-0.10000m',\n",
-       "  'esa-cci'),\n",
-       " ('esacci.BIOMASS.yr.L4.AGB.multi-sensor.multi-platform.MERGED.5-0.1000m',\n",
-       "  'esa-cci'),\n",
-       " ('esacci.BIOMASS.yr.L4.AGB.multi-sensor.multi-platform.MERGED.5-0.100m',\n",
-       "  'esa-cci'),\n",
-       " ('esacci.BIOMASS.yr.L4.AGB.multi-sensor.multi-platform.MERGED.5-0.25000m',\n",
-       "  'esa-cci'),\n",
-       " ('esacci.BIOMASS.yr.L4.AGB.multi-sensor.multi-platform.MERGED.5-0.50000m',\n",
-       "  'esa-cci')]"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "cci_store = new_data_store(\"esa-cci-zarr\")\n",
+    "cci_store = new_data_store(\"esa-cci\")\n",
     "# List all available data sets of an ECV\n",
-    "list_ecv_datasets(\"Biomass\")"
+    "# list_ecv_datasets(\"Biomass\")"
    ]
   },
   {
@@ -564,7 +530,7 @@
        ]
       },
       "text/plain": [
-       "<xcube.core.store.descriptor.DatasetDescriptor at 0x7f04b60c7a10>"
+       "<xcube.core.store.descriptor.DatasetDescriptor at 0x7f599f4abd70>"
       ]
      },
      "execution_count": 4,
@@ -635,7 +601,7 @@
        "type": "object"
       },
       "text/plain": [
-       "<xcube.util.jsonschema.JsonObjectSchema at 0x7f04b6d25b80>"
+       "<xcube.util.jsonschema.JsonObjectSchema at 0x7f599f4ab9b0>"
       ]
      },
      "execution_count": 5,
@@ -758,7 +724,7 @@
       "Attributes:\n",
       "    Conventions:             CF-1.7\n",
       "    title:                   esacci.BIOMASS.yr.L4.AGB.multi-sensor.multi-plat...\n",
-      "    date_created:            2025-04-10T08:36:49.261269\n",
+      "    date_created:            2025-04-11T09:36:54.074806\n",
       "    processing_level:        L4\n",
       "    time_coverage_start:     2018-01-01T00:00:00\n",
       "    time_coverage_end:       2022-01-01T00:00:00\n",
