Add sea level JN

--- a/notebooks/Seaice_CCI.ipynb
+++ b/notebooks/Seaice_CCI.ipynb
@@ -138,7 +138,7 @@
    "source": [
     "cci_store = new_data_store(\"esa-cci\")\n",
     "# List all available data sets of an ECV\n",
-    "list_ecv_datasets(\"seaice\")"
+    "# list_ecv_datasets(\"seaice\")"
    ]
   },
   {
