--- a/notebooks/Cloud_CCI.ipynb
+++ b/notebooks/Cloud_CCI.ipynb
@@ -80,28 +80,7 @@
    "execution_count": 2,
    "id": "94164c99-2ef2-48d7-b098-6e136ee861af",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[('esacci.CLOUD.mon.L3C.CLD_PRODUCTS.MODIS.Aqua.MODIS_AQUA.2-0.r1', 'esa-cci'),\n",
-       " ('esacci.CLOUD.mon.L3C.CLD_PRODUCTS.MODIS.Terra.MODIS_TERRA.2-0.r1',\n",
-       "  'esa-cci'),\n",
-       " ('esacci.CLOUD.mon.L3C.CLD_PRODUCTS.multi-sensor.multi-platform.ATSR2-AATSR.3-0.r1',\n",
-       "  'esa-cci'),\n",
-       " ('esacci.CLOUD.mon.L3C.CLD_PRODUCTS.multi-sensor.multi-platform.AVHRR-AM.3-0.r1',\n",
-       "  'esa-cci'),\n",
-       " ('esacci.CLOUD.mon.L3C.CLD_PRODUCTS.multi-sensor.multi-platform.AVHRR-PM.3-0.r1',\n",
-       "  'esa-cci'),\n",
-       " ('esacci.CLOUD.mon.L3C.CLD_PRODUCTS.multi-sensor.multi-platform.MERIS-AATSR.2-0.r1',\n",
-       "  'esa-cci')]"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "cci_store = new_data_store(\"esa-cci\")\n",
     "# List all available data sets of an ECV\n",
@@ -137,7 +116,7 @@
    "metadata": {},
    "source": [
     "This product provides monthly cloud properties on a regular latitude–longitude grid at a resolution of 0.5°.\n",
-    "📘 A full list of dataset IDs can be retrieved from the store or found in the [ESA CCI Climate Toolbox documentation](https://esa-climate-toolbox.readthedocs.io/en/latest/data_access.html#available-datasets)."
+    "📘 A full list of dataset IDs can be retrieved from the store or found in the [ESA CCI Climate Toolbox documentation](https://esa-climate-toolbox.readthedocs.io/en/latest/quick_start.html#accessing-data)."
    ]
   },
   {
@@ -158,7 +137,7 @@
     "🛠️ Tip: You can use the description to verify variable names, dimensions (e.g., `lat`, `lon`, `time`), and time coverage.\n",
     "\n",
     "📘 More on dataset structure:  \n",
-    "🔗 [ESA Climate Toolbox – Data Access](https://esa-climate-toolbox.readthedocs.io/en/latest/data_access.html)"
+    "🔗 [ESA Climate Toolbox – Data Access](https://esa-climate-toolbox.readthedocs.io/en/latest/quick_start.html#accessing-data)"
    ]
   },
   {
@@ -9652,7 +9631,7 @@
        ]
       },
       "text/plain": [
-       "<xcube.core.store.descriptor.DatasetDescriptor at 0x7fe2c86acfb0>"
+       "<xcube.core.store.descriptor.DatasetDescriptor at 0x7f0ac9ce3230>"
       ]
      },
      "execution_count": 4,
@@ -9925,7 +9904,7 @@
        "type": "object"
       },
       "text/plain": [
-       "<xcube.util.jsonschema.JsonObjectSchema at 0x7fe2c863e030>"
+       "<xcube.util.jsonschema.JsonObjectSchema at 0x7f0ac92da3c0>"
       ]
      },
      "execution_count": 5,
@@ -10049,7 +10028,7 @@
       "Attributes:\n",
       "    Conventions:             CF-1.7\n",
       "    title:                   esacci.CLOUD.mon.L3C.CLD_PRODUCTS.multi-sensor.m...\n",
-      "    date_created:            2025-04-10T10:43:54.285347\n",
+      "    date_created:            2025-04-15T13:42:12.896505\n",
       "    processing_level:        L3C\n",
       "    time_coverage_start:     2016-06-01T00:00:00\n",
       "    time_coverage_end:       2016-07-01T00:00:00\n",
