--- a/notebooks/GHG_CCI.ipynb
+++ b/notebooks/GHG_CCI.ipynb
@@ -99,7 +99,7 @@
     "\n",
     "For other ESA CCI projects (e.g., Land Cover, Soil Moisture, Sea Surface Temperature), simply replace the dataset ID accordingly.\n",
     "\n",
-    "📘 A full list of dataset IDs can be retrieved from the store or found in the [ESA CCI Climate Toolbox documentation](https://esa-climate-toolbox.readthedocs.io/en/latest/data_access.html#available-datasets)."
+    "📘 A full list of dataset IDs can be retrieved from the store or found in the [ESA CCI Climate Toolbox documentation](https://esa-climate-toolbox.readthedocs.io/en/latest/quick_start.html#accessing-data)."
    ]
   },
   {
@@ -130,7 +130,7 @@
     "🛠️ Tip: You can use the description to verify variable names, dimensions (e.g., `lat`, `lon`, `time`), and time coverage.\n",
     "\n",
     "📘 More on dataset structure:  \n",
-    "🔗 [ESA Climate Toolbox – Data Access](https://esa-climate-toolbox.readthedocs.io/en/latest/data_access.html)"
+    "🔗 [ESA Climate Toolbox – Data Access](https://esa-climate-toolbox.readthedocs.io/en/latest/quick_start.html#accessing-data)"
    ]
   },
   {
@@ -382,7 +382,7 @@
        ]
       },
       "text/plain": [
-       "<xcube.core.store.descriptor.GeoDataFrameDescriptor at 0x7f4ed833b290>"
+       "<xcube.core.store.descriptor.GeoDataFrameDescriptor at 0x7f582a9cce90>"
       ]
      },
      "execution_count": 4,
@@ -502,7 +502,7 @@
        "type": "object"
       },
       "text/plain": [
-       "<xcube.util.jsonschema.JsonObjectSchema at 0x7f4ebe6fe900>"
+       "<xcube.util.jsonschema.JsonObjectSchema at 0x7f582951e6f0>"
       ]
      },
      "execution_count": 5,
@@ -678,14 +678,6 @@
     "plt.tight_layout()\n",
     "plt.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9ecac0da-9d74-4c8c-b45c-2fcc81c6a7d6",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
