--- a/notebooks/Soilmoisture_CCI.ipynb
+++ b/notebooks/Soilmoisture_CCI.ipynb
@@ -117,7 +117,7 @@
    "id": "817922fd-a86b-4cee-ab9b-5a042692be42",
    "metadata": {},
    "source": [
-    "📘 A full list of dataset IDs can be retrieved from the store or found in the [ESA CCI Climate Toolbox documentation](https://esa-climate-toolbox.readthedocs.io/en/latest/data_access.html#available-datasets)."
+    "📘 A full list of dataset IDs can be retrieved from the store or found in the [ESA CCI Climate Toolbox documentation](https://esa-climate-toolbox.readthedocs.io/en/latest/quick_start.html#accessing-data)."
    ]
   },
   {
@@ -138,7 +138,7 @@
     "🛠️ Tip: You can use the description to verify variable names, dimensions (e.g., `lat`, `lon`, `time`), and time coverage.\n",
     "\n",
     "📘 More on dataset structure:  \n",
-    "🔗 [ESA Climate Toolbox – Data Access](https://esa-climate-toolbox.readthedocs.io/en/latest/data_access.html)"
+    "🔗 [ESA Climate Toolbox – Data Access](https://esa-climate-toolbox.readthedocs.io/en/latest/quick_start.html#accessing-data)"
    ]
   },
   {
@@ -804,7 +804,7 @@
        ]
       },
       "text/plain": [
-       "<xcube.core.store.descriptor.DatasetDescriptor at 0x7f79bd1b9430>"
+       "<xcube.core.store.descriptor.DatasetDescriptor at 0x7f6b0421c2c0>"
       ]
      },
      "execution_count": 4,
@@ -905,7 +905,7 @@
        "type": "object"
       },
       "text/plain": [
-       "<xcube.util.jsonschema.JsonObjectSchema at 0x7f79bd0dc6b0>"
+       "<xcube.util.jsonschema.JsonObjectSchema at 0x7f6a87a74c20>"
       ]
      },
      "execution_count": 5,
@@ -1008,7 +1008,7 @@
       "Attributes:\n",
       "    Conventions:             CF-1.7\n",
       "    title:                   esacci.SOILMOISTURE.day.L3S.SSMV.multi-sensor.mu...\n",
-      "    date_created:            2025-04-15T08:06:21.984487\n",
+      "    date_created:            2025-04-15T14:32:45.793555\n",
       "    processing_level:        L3S\n",
       "    time_coverage_start:     2022-06-21T00:00:00\n",
       "    time_coverage_end:       2022-06-22T00:00:00\n",
