--- a/notebooks/Icesheets_CCI.ipynb
+++ b/notebooks/Icesheets_CCI.ipynb
@@ -5,7 +5,7 @@
    "id": "ab36065c-42b2-4539-94b5-c1e048a0e8b4",
    "metadata": {},
    "source": [
-    "# Getting Started with Icesheets CCI Data"
+    "# Getting Started with Ice Sheets CCI Data"
    ]
   },
   {
@@ -117,7 +117,7 @@
    "id": "817922fd-a86b-4cee-ab9b-5a042692be42",
    "metadata": {},
    "source": [
-    "📘 A full list of dataset IDs can be retrieved from the store or found in the [ESA CCI Climate Toolbox documentation](https://esa-climate-toolbox.readthedocs.io/en/latest/data_access.html#available-datasets)."
+    "📘 A full list of dataset IDs can be retrieved from the store or found in the [ESA CCI Climate Toolbox documentation](https://esa-climate-toolbox.readthedocs.io/en/latest/quick_start.html#accessing-data)."
    ]
   },
   {
@@ -138,7 +138,7 @@
     "🛠️ Tip: You can use the description to verify variable names, dimensions (e.g., `lat`, `lon`, `time`), and time coverage.\n",
     "\n",
     "📘 More on dataset structure:  \n",
-    "🔗 [ESA Climate Toolbox – Data Access](https://esa-climate-toolbox.readthedocs.io/en/latest/data_access.html)"
+    "🔗 [ESA Climate Toolbox – Data Access](https://esa-climate-toolbox.readthedocs.io/en/latest/quick_start.html#accessing-data)"
    ]
   },
   {
@@ -593,7 +593,7 @@
        ]
       },
       "text/plain": [
-       "<xcube.core.store.descriptor.DatasetDescriptor at 0x7fb5c4a32d20>"
+       "<xcube.core.store.descriptor.DatasetDescriptor at 0x7fd675bcfb60>"
       ]
      },
      "execution_count": 4,
@@ -667,7 +667,7 @@
        "type": "object"
       },
       "text/plain": [
-       "<xcube.util.jsonschema.JsonObjectSchema at 0x7fb5c4a336e0>"
+       "<xcube.util.jsonschema.JsonObjectSchema at 0x7fd675bcd610>"
       ]
      },
      "execution_count": 5,
@@ -771,7 +771,7 @@
       "Attributes:\n",
       "    Conventions:             CF-1.7\n",
       "    title:                   esacci.ICESHEETS.yr.Unspecified.SEC.multi-sensor...\n",
-      "    date_created:            2025-04-11T13:45:41.093539\n",
+      "    date_created:            2025-04-15T13:49:24.645212\n",
       "    processing_level:        Unspecified\n",
       "    time_coverage_start:     2014-01-01T00:00:00\n",
       "    time_coverage_end:       2015-01-01T00:00:00\n",
