--- a/notebooks/LST_CCI.ipynb
+++ b/notebooks/LST_CCI.ipynb
@@ -80,83 +80,11 @@
    "execution_count": 2,
    "id": "94164c99-2ef2-48d7-b098-6e136ee861af",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[('esacci.LST.3-hours.L3S.LST.multi-sensor.multi-platform.IRMGP.1-00.r1',\n",
-       "  'esa-cci'),\n",
-       " ('esacci.LST.day.L3C.LST.AATSR.Envisat.ATSR_3.3-00.DAY', 'esa-cci'),\n",
-       " ('esacci.LST.day.L3C.LST.AATSR.Envisat.ATSR_3.3-00.NIGHT', 'esa-cci'),\n",
-       " ('esacci.LST.day.L3C.LST.ATSR-2.ERS-2.ATSR_2.3-00.DAY', 'esa-cci'),\n",
-       " ('esacci.LST.day.L3C.LST.ATSR-2.ERS-2.ATSR_2.3-00.NIGHT', 'esa-cci'),\n",
-       " ('esacci.LST.day.L3C.LST.MODIS.Aqua.MODISA.3-00.DAY', 'esa-cci'),\n",
-       " ('esacci.LST.day.L3C.LST.MODIS.Aqua.MODISA.3-00.NIGHT', 'esa-cci'),\n",
-       " ('esacci.LST.day.L3C.LST.MODIS.Terra.MODIST.3-00.DAY', 'esa-cci'),\n",
-       " ('esacci.LST.day.L3C.LST.MODIS.Terra.MODIST.3-00.NIGHT', 'esa-cci'),\n",
-       " ('esacci.LST.day.L3C.LST.SLSTR.Sentinel-3A.SLSTRA.3-00.DAY', 'esa-cci'),\n",
-       " ('esacci.LST.day.L3C.LST.SLSTR.Sentinel-3A.SLSTRA.3-00.NIGHT', 'esa-cci'),\n",
-       " ('esacci.LST.day.L3C.LST.SLSTR.Sentinel-3B.SLSTRB.3-00.DAY', 'esa-cci'),\n",
-       " ('esacci.LST.day.L3C.LST.SLSTR.Sentinel-3B.SLSTRB.3-00.NIGHT', 'esa-cci'),\n",
-       " ('esacci.LST.day.L3C.LST.multi-sensor.multi-platform.SSMI_SSMIS.v2-33.ASC',\n",
-       "  'esa-cci'),\n",
-       " ('esacci.LST.day.L3C.LST.multi-sensor.multi-platform.SSMI_SSMIS.v2-33.DES',\n",
-       "  'esa-cci'),\n",
-       " ('esacci.LST.day.L3S.LST.multi-sensor.multi-platform.IRCDR.2-00.DAY',\n",
-       "  'esa-cci'),\n",
-       " ('esacci.LST.day.L3S.LST.multi-sensor.multi-platform.IRCDR.2-00.NIGHT',\n",
-       "  'esa-cci'),\n",
-       " ('esacci.LST.mon.L3C.LST.AATSR.Envisat.ATSR_3.3-00.DAY', 'esa-cci'),\n",
-       " ('esacci.LST.mon.L3C.LST.AATSR.Envisat.ATSR_3.3-00.NIGHT', 'esa-cci'),\n",
-       " ('esacci.LST.mon.L3C.LST.ATSR-2.ERS-2.ATSR_2.3-00.DAY', 'esa-cci'),\n",
-       " ('esacci.LST.mon.L3C.LST.ATSR-2.ERS-2.ATSR_2.3-00.NIGHT', 'esa-cci'),\n",
-       " ('esacci.LST.mon.L3C.LST.MODIS.Aqua.MODISA.3-00.DAY', 'esa-cci'),\n",
-       " ('esacci.LST.mon.L3C.LST.MODIS.Aqua.MODISA.3-00.NIGHT', 'esa-cci'),\n",
-       " ('esacci.LST.mon.L3C.LST.MODIS.Terra.MODIST.3-00.DAY', 'esa-cci'),\n",
-       " ('esacci.LST.mon.L3C.LST.MODIS.Terra.MODIST.3-00.NIGHT', 'esa-cci'),\n",
-       " ('esacci.LST.mon.L3C.LST.SLSTR.Sentinel-3A.SLSTRA.3-00.DAY', 'esa-cci'),\n",
-       " ('esacci.LST.mon.L3C.LST.SLSTR.Sentinel-3A.SLSTRA.3-00.NIGHT', 'esa-cci'),\n",
-       " ('esacci.LST.mon.L3C.LST.SLSTR.Sentinel-3B.SLSTRB.3-00.DAY', 'esa-cci'),\n",
-       " ('esacci.LST.mon.L3C.LST.SLSTR.Sentinel-3B.SLSTRB.3-00.NIGHT', 'esa-cci'),\n",
-       " ('esacci.LST.mon.L3C.LST.multi-sensor.multi-platform.SSMI_SSMIS.v2-33.ASC',\n",
-       "  'esa-cci'),\n",
-       " ('esacci.LST.mon.L3C.LST.multi-sensor.multi-platform.SSMI_SSMIS.v2-33.DES',\n",
-       "  'esa-cci'),\n",
-       " ('esacci.LST.mon.L3S.LST.multi-sensor.multi-platform.IRCDR.2-00.DAY',\n",
-       "  'esa-cci'),\n",
-       " ('esacci.LST.mon.L3S.LST.multi-sensor.multi-platform.IRCDR.2-00.NIGHT',\n",
-       "  'esa-cci'),\n",
-       " ('esacci.LST.mon.L3S.LST.multi-sensor.multi-platform.IRMGP.1-00.00:00UTC',\n",
-       "  'esa-cci'),\n",
-       " ('esacci.LST.mon.L3S.LST.multi-sensor.multi-platform.IRMGP.1-00.03:00UTC',\n",
-       "  'esa-cci'),\n",
-       " ('esacci.LST.mon.L3S.LST.multi-sensor.multi-platform.IRMGP.1-00.06:00UTC',\n",
-       "  'esa-cci'),\n",
-       " ('esacci.LST.mon.L3S.LST.multi-sensor.multi-platform.IRMGP.1-00.09:00UTC',\n",
-       "  'esa-cci'),\n",
-       " ('esacci.LST.mon.L3S.LST.multi-sensor.multi-platform.IRMGP.1-00.12:00UTC',\n",
-       "  'esa-cci'),\n",
-       " ('esacci.LST.mon.L3S.LST.multi-sensor.multi-platform.IRMGP.1-00.15:00UTC',\n",
-       "  'esa-cci'),\n",
-       " ('esacci.LST.mon.L3S.LST.multi-sensor.multi-platform.IRMGP.1-00.18:00UTC',\n",
-       "  'esa-cci'),\n",
-       " ('esacci.LST.mon.L3S.LST.multi-sensor.multi-platform.IRMGP.1-00.21:00UTC',\n",
-       "  'esa-cci'),\n",
-       " ('esacci.LST.yr.L3C.LST.multi-sensor.multi-platform.SSMI_SSMIS.v2-33.ASC',\n",
-       "  'esa-cci'),\n",
-       " ('esacci.LST.yr.L3C.LST.multi-sensor.multi-platform.SSMI_SSMIS.v2-33.DES',\n",
-       "  'esa-cci')]"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "cci_store = new_data_store(\"esa-cci\")\n",
     "# List all available data sets of an ECV\n",
-    "list_ecv_datasets(\"LST\")"
+    "# list_ecv_datasets(\"LST\")"
    ]
   },
   {
@@ -189,7 +117,7 @@
    "id": "817922fd-a86b-4cee-ab9b-5a042692be42",
    "metadata": {},
    "source": [
-    "📘 A full list of dataset IDs can be retrieved from the store or found in the [ESA CCI Climate Toolbox documentation](https://esa-climate-toolbox.readthedocs.io/en/latest/data_access.html#available-datasets)."
+    "📘 A full list of dataset IDs can be retrieved from the store or found in the [ESA CCI Climate Toolbox documentation](https://esa-climate-toolbox.readthedocs.io/en/latest/quick_start.html#accessing-data)."
    ]
   },
   {
@@ -210,7 +138,7 @@
     "🛠️ Tip: You can use the description to verify variable names, dimensions (e.g., `lat`, `lon`, `time`), and time coverage.\n",
     "\n",
     "📘 More on dataset structure:  \n",
-    "🔗 [ESA Climate Toolbox – Data Access](https://esa-climate-toolbox.readthedocs.io/en/latest/data_access.html)"
+    "🔗 [ESA Climate Toolbox – Data Access](https://esa-climate-toolbox.readthedocs.io/en/latest/quick_start.html#accessing-data)"
    ]
   },
   {
@@ -1179,7 +1107,7 @@
        ]
       },
       "text/plain": [
-       "<xcube.core.store.descriptor.DatasetDescriptor at 0x7fdf71bbc140>"
+       "<xcube.core.store.descriptor.DatasetDescriptor at 0x7f46beca4cb0>"
       ]
      },
      "execution_count": 4,
@@ -1287,7 +1215,7 @@
        "type": "object"
       },
       "text/plain": [
-       "<xcube.util.jsonschema.JsonObjectSchema at 0x7fdf713c6a50>"
+       "<xcube.util.jsonschema.JsonObjectSchema at 0x7f46bd7acf20>"
       ]
      },
      "execution_count": 5,
@@ -1390,7 +1318,7 @@
       "Attributes:\n",
       "    Conventions:             CF-1.7\n",
       "    title:                   esacci.LST.day.L3C.LST.multi-sensor.multi-platfo...\n",
-      "    date_created:            2025-04-14T15:19:30.934428\n",
+      "    date_created:            2025-04-15T13:55:35.426392\n",
       "    processing_level:        L3C\n",
       "    time_coverage_start:     2020-06-21T00:00:00\n",
       "    time_coverage_end:       2020-06-22T00:00:00\n",
