--- a/notebooks/LandCover_CCI.ipynb
+++ b/notebooks/LandCover_CCI.ipynb
@@ -97,7 +97,7 @@
     "\n",
     "In this example, we are using a dataset from the **Land Cover CCI project** that provides annual Level 4 global land cover maps derived from multiple satellite sensors. The main variable in this dataset is lccs_class, which classifies the land surface according to the **UN Land Cover Classification System (LCCS)**. This information is essential for applications in climate modelling, land use planning, biodiversity monitoring, and many other environmental studies.\n",
     "\n",
-    "📘 A full list of dataset IDs can be retrieved from the store or found in the [ESA CCI Climate Toolbox documentation](https://esa-climate-toolbox.readthedocs.io/en/latest/data_access.html#available-datasets).\n",
+    "📘 A full list of dataset IDs can be retrieved from the store or found in the [ESA CCI Climate Toolbox documentation](https://esa-climate-toolbox.readthedocs.io/en/latest/quick_start.html#accessing-data).\n",
     "\n",
     "We will use the following dataset ID:"
    ]
@@ -130,7 +130,7 @@
     "🛠️ Tip: You can use the description to verify variable names, dimensions (e.g., `lat`, `lon`, `time`), and time coverage.\n",
     "\n",
     "📘 More on dataset structure:  \n",
-    "🔗 [ESA Climate Toolbox – Data Access](https://esa-climate-toolbox.readthedocs.io/en/latest/data_access.html)"
+    "🔗 [ESA Climate Toolbox – Data Access](https://esa-climate-toolbox.readthedocs.io/en/latest/quick_start.html#accessing-data)"
    ]
   },
   {
@@ -626,7 +626,7 @@
        ]
       },
       "text/plain": [
-       "<xcube.core.store.descriptor.DatasetDescriptor at 0x7f3ab7aa8c20>"
+       "<xcube.core.store.descriptor.DatasetDescriptor at 0x7f9e0813cef0>"
       ]
      },
      "execution_count": 4,
@@ -725,7 +725,7 @@
        "type": "object"
       },
       "text/plain": [
-       "<xcube.util.jsonschema.JsonObjectSchema at 0x7f3ab7661190>"
+       "<xcube.util.jsonschema.JsonObjectSchema at 0x7f9e07ccade0>"
       ]
      },
      "execution_count": 5,
@@ -828,7 +828,7 @@
       "Attributes:\n",
       "    Conventions:             CF-1.7\n",
       "    title:                   esacci.LC.yr.L4.LCCS.multi-sensor.multi-platform...\n",
-      "    date_created:            2025-04-10T13:41:02.753719\n",
+      "    date_created:            2025-04-15T13:53:37.214030\n",
       "    processing_level:        L4\n",
       "    time_coverage_start:     2015-01-01T00:00:00\n",
       "    time_coverage_end:       2016-01-01T00:00:00\n",
