--- a/notebooks/Oceancolour_CCI.ipynb
+++ b/notebooks/Oceancolour_CCI.ipynb
@@ -117,7 +117,7 @@
    "id": "817922fd-a86b-4cee-ab9b-5a042692be42",
    "metadata": {},
    "source": [
-    "📘 A full list of dataset IDs can be retrieved from the store or found in the [ESA CCI Climate Toolbox documentation](https://esa-climate-toolbox.readthedocs.io/en/latest/data_access.html#available-datasets)."
+    "📘 A full list of dataset IDs can be retrieved from the store or found in the [ESA CCI Climate Toolbox documentation](https://esa-climate-toolbox.readthedocs.io/en/latest/quick_start.html#accessing-data)."
    ]
   },
   {
@@ -138,7 +138,7 @@
     "🛠️ Tip: You can use the description to verify variable names, dimensions (e.g., `lat`, `lon`, `time`), and time coverage.\n",
     "\n",
     "📘 More on dataset structure:  \n",
-    "🔗 [ESA Climate Toolbox – Data Access](https://esa-climate-toolbox.readthedocs.io/en/latest/data_access.html)"
+    "🔗 [ESA Climate Toolbox – Data Access](https://esa-climate-toolbox.readthedocs.io/en/latest/quick_start.html#accessing-data)"
    ]
   },
   {
@@ -4753,7 +4753,7 @@
        ]
       },
       "text/plain": [
-       "<xcube.core.store.descriptor.DatasetDescriptor at 0x7fa924806030>"
+       "<xcube.core.store.descriptor.DatasetDescriptor at 0x7f2b32ce91c0>"
       ]
      },
      "execution_count": 4,
@@ -4940,7 +4940,7 @@
        "type": "object"
       },
       "text/plain": [
-       "<xcube.util.jsonschema.JsonObjectSchema at 0x7fa9169e6600>"
+       "<xcube.util.jsonschema.JsonObjectSchema at 0x7f2b322ffbf0>"
       ]
      },
      "execution_count": 5,
@@ -5043,7 +5043,7 @@
       "Attributes:\n",
       "    Conventions:             CF-1.7\n",
       "    title:                   esacci.OC.mon.L3S.OC_PRODUCTS.multi-sensor.multi...\n",
-      "    date_created:            2025-04-15T10:06:19.320730\n",
+      "    date_created:            2025-04-15T13:57:37.176391\n",
       "    processing_level:        L3S\n",
       "    time_coverage_start:     2022-06-01T00:00:00\n",
       "    time_coverage_end:       2022-07-01T00:00:00\n",
