--- a/notebooks/Ozone_CCI.ipynb
+++ b/notebooks/Ozone_CCI.ipynb
@@ -102,7 +102,7 @@
     "This variable is important for monitoring the ozone layer, tracking ozone depletion, and understanding its role in protecting life on Earth from harmful ultraviolet radiation.\n",
     "\n",
     "For other ESA CCI projects (e.g., Greenhouse Gases, Fire, Soil Moisture), simply replace the dataset ID accordingly. \n",
-    "📘 A full list of dataset IDs can be retrieved from the store or found in the [ESA CCI Climate Toolbox documentation](https://esa-climate-toolbox.readthedocs.io/en/latest/data_access.html#available-datasets).\n",
+    "📘 A full list of dataset IDs can be retrieved from the store or found in the [ESA CCI Climate Toolbox documentation](https://esa-climate-toolbox.readthedocs.io/en/latest/quick_start.html#accessing-data).\n",
     "\n",
     "We will use the following dataset ID:"
    ]
@@ -135,7 +135,7 @@
     "🛠️ Tip: You can use the description to verify variable names, dimensions (e.g., `lat`, `lon`, `time`), and time coverage.\n",
     "\n",
     "📘 More on dataset structure:  \n",
-    "🔗 [ESA Climate Toolbox – Data Access](https://esa-climate-toolbox.readthedocs.io/en/latest/data_access.html)"
+    "🔗 [ESA Climate Toolbox – Data Access](https://esa-climate-toolbox.readthedocs.io/en/latest/quick_start.html#accessing-data)"
    ]
   },
   {
@@ -532,7 +532,7 @@
        ]
       },
       "text/plain": [
-       "<xcube.core.store.descriptor.DatasetDescriptor at 0x7fbdef177530>"
+       "<xcube.core.store.descriptor.DatasetDescriptor at 0x7fddea053e00>"
       ]
      },
      "execution_count": 4,
@@ -629,7 +629,7 @@
        "type": "object"
       },
       "text/plain": [
-       "<xcube.util.jsonschema.JsonObjectSchema at 0x7fbdef5e3200>"
+       "<xcube.util.jsonschema.JsonObjectSchema at 0x7fddea02aae0>"
       ]
      },
      "execution_count": 5,
@@ -732,7 +732,7 @@
       "Attributes: (12/18)\n",
       "    Conventions:                CF-1.7\n",
       "    title:                      esacci.OZONE.day.L3S.TC.multi-sensor.multi-pl...\n",
-      "    date_created:               2025-04-10T14:51:32.516735\n",
+      "    date_created:               2025-04-15T14:00:11.586934\n",
       "    processing_level:           L3S\n",
       "    time_coverage_start:        2011-06-01T00:00:00\n",
       "    time_coverage_end:          2011-06-30T00:00:00\n",
