--- a/notebooks/SSS_CCI.ipynb
+++ b/notebooks/SSS_CCI.ipynb
@@ -117,7 +117,7 @@
    "id": "817922fd-a86b-4cee-ab9b-5a042692be42",
    "metadata": {},
    "source": [
-    "📘 A full list of dataset IDs can be retrieved from the store or found in the [ESA CCI Climate Toolbox documentation](https://esa-climate-toolbox.readthedocs.io/en/latest/data_access.html#available-datasets)."
+    "📘 A full list of dataset IDs can be retrieved from the store or found in the [ESA CCI Climate Toolbox documentation](https://esa-climate-toolbox.readthedocs.io/en/latest/quick_start.html#accessing-data)."
    ]
   },
   {
@@ -138,7 +138,7 @@
     "🛠️ Tip: You can use the description to verify variable names, dimensions (e.g., `lat`, `lon`, `time`), and time coverage.\n",
     "\n",
     "📘 More on dataset structure:  \n",
-    "🔗 [ESA Climate Toolbox – Data Access](https://esa-climate-toolbox.readthedocs.io/en/latest/data_access.html)"
+    "🔗 [ESA Climate Toolbox – Data Access](https://esa-climate-toolbox.readthedocs.io/en/latest/quick_start.html#accessing-data)"
    ]
   },
   {
@@ -788,7 +788,7 @@
        ]
       },
       "text/plain": [
-       "<xcube.core.store.descriptor.DatasetDescriptor at 0x7fe7341fcd70>"
+       "<xcube.core.store.descriptor.DatasetDescriptor at 0x7f6e865af980>"
       ]
      },
      "execution_count": 4,
@@ -891,7 +891,7 @@
        "type": "object"
       },
       "text/plain": [
-       "<xcube.util.jsonschema.JsonObjectSchema at 0x7fe72be496d0>"
+       "<xcube.util.jsonschema.JsonObjectSchema at 0x7f6e7c277d10>"
       ]
      },
      "execution_count": 5,
@@ -994,7 +994,7 @@
       "Attributes:\n",
       "    Conventions:             CF-1.7\n",
       "    title:                   esacci.SEASURFACESALINITY.15-days.L4.SSS.multi-s...\n",
-      "    date_created:            2025-04-14T16:59:19.526727\n",
+      "    date_created:            2025-04-15T14:34:25.738604\n",
       "    processing_level:        L4\n",
       "    time_coverage_start:     2019-05-18T00:00:00\n",
       "    time_coverage_end:       2019-07-16T23:59:59\n",
