--- a/notebooks/SST_CCI.ipynb
+++ b/notebooks/SST_CCI.ipynb
@@ -117,7 +117,7 @@
    "id": "817922fd-a86b-4cee-ab9b-5a042692be42",
    "metadata": {},
    "source": [
-    "📘 A full list of dataset IDs can be retrieved from the store or found in the [ESA CCI Climate Toolbox documentation](https://esa-climate-toolbox.readthedocs.io/en/latest/data_access.html#available-datasets)."
+    "📘 A full list of dataset IDs can be retrieved from the store or found in the [ESA CCI Climate Toolbox documentation](https://esa-climate-toolbox.readthedocs.io/en/latest/quick_start.html#accessing-data)."
    ]
   },
   {
@@ -138,7 +138,7 @@
     "🛠️ Tip: You can use the description to verify variable names, dimensions (e.g., `lat`, `lon`, `time`), and time coverage.\n",
     "\n",
     "📘 More on dataset structure:  \n",
-    "🔗 [ESA Climate Toolbox – Data Access](https://esa-climate-toolbox.readthedocs.io/en/latest/data_access.html)"
+    "🔗 [ESA Climate Toolbox – Data Access](https://esa-climate-toolbox.readthedocs.io/en/latest/quick_start.html#accessing-data)"
    ]
   },
   {
@@ -676,7 +676,7 @@
        ]
       },
       "text/plain": [
-       "<xcube.core.store.descriptor.DatasetDescriptor at 0x7fb49fa7ecf0>"
+       "<xcube.core.store.descriptor.DatasetDescriptor at 0x7f8075dfef30>"
       ]
      },
      "execution_count": 4,
@@ -773,7 +773,7 @@
        "type": "object"
       },
       "text/plain": [
-       "<xcube.util.jsonschema.JsonObjectSchema at 0x7fb49fac8410>"
+       "<xcube.util.jsonschema.JsonObjectSchema at 0x7f800729d580>"
       ]
      },
      "execution_count": 5,
@@ -878,7 +878,7 @@
       "Attributes:\n",
       "    Conventions:             CF-1.7\n",
       "    title:                   esacci.SST.day.L4.SSTdepth.multi-sensor.multi-pl...\n",
-      "    date_created:            2025-04-14T16:27:53.124425\n",
+      "    date_created:            2025-04-15T14:36:03.881473\n",
       "    processing_level:        L4\n",
       "    time_coverage_start:     2016-06-21T00:00:00\n",
       "    time_coverage_end:       2016-06-22T00:00:00\n",
