--- a/notebooks/Snow_CCI.ipynb
+++ b/notebooks/Snow_CCI.ipynb
@@ -117,7 +117,7 @@
    "id": "817922fd-a86b-4cee-ab9b-5a042692be42",
    "metadata": {},
    "source": [
-    "📘 A full list of dataset IDs can be retrieved from the store or found in the [ESA CCI Climate Toolbox documentation](https://esa-climate-toolbox.readthedocs.io/en/latest/data_access.html#available-datasets)."
+    "📘 A full list of dataset IDs can be retrieved from the store or found in the [ESA CCI Climate Toolbox documentation](hhttps://esa-climate-toolbox.readthedocs.io/en/latest/quick_start.html#accessing-data)."
    ]
   },
   {
@@ -138,7 +138,7 @@
     "🛠️ Tip: You can use the description to verify variable names, dimensions (e.g., `lat`, `lon`, `time`), and time coverage.\n",
     "\n",
     "📘 More on dataset structure:  \n",
-    "🔗 [ESA Climate Toolbox – Data Access](https://esa-climate-toolbox.readthedocs.io/en/latest/data_access.html)"
+    "🔗 [ESA Climate Toolbox – Data Access](https://esa-climate-toolbox.readthedocs.io/en/latest/quick_start.html#accessing-data)"
    ]
   },
   {
@@ -551,7 +551,7 @@
        ]
       },
       "text/plain": [
-       "<xcube.core.store.descriptor.DatasetDescriptor at 0x7fc22f8abce0>"
+       "<xcube.core.store.descriptor.DatasetDescriptor at 0x7fce40ca3ef0>"
       ]
      },
      "execution_count": 4,
@@ -622,7 +622,7 @@
        "type": "object"
       },
       "text/plain": [
-       "<xcube.util.jsonschema.JsonObjectSchema at 0x7fc22f8d8a40>"
+       "<xcube.util.jsonschema.JsonObjectSchema at 0x7fce40ca3350>"
       ]
      },
      "execution_count": 5,
@@ -728,7 +728,7 @@
       "Attributes:\n",
       "    Conventions:             CF-1.7\n",
       "    title:                   esacci.SNOW.day.L3C.SWE.multi-sensor.multi-platf...\n",
-      "    date_created:            2025-04-14T17:12:24.997133\n",
+      "    date_created:            2025-04-15T14:31:05.481336\n",
       "    processing_level:        L3C\n",
       "    time_coverage_start:     2000-03-01T00:00:00\n",
       "    time_coverage_end:       2000-03-02T00:00:00\n",
